<resources>
    <string name="camera_error">Can\'t access camera, please try again</string>
    <string name="scan_book">Scan book</string>
    <string name="title">Title</string>
    <string name="subtitle">Subtitle</string>
    <string name="authors">Author</string>
    <string name="publishedDate">Published Date</string>
    <string name="pageCount">Page count</string>
    <string name="addNewBook">Add new book</string>
    <string name="manuel">Add book manually</string>
    <string name="invalidISBN">Invalid ISBN/Title</string>
    <string name="bookNotFound">Book not found</string>
    <string name="titleIsMissing">Title is missing</string>
    <string name="noBooks">Your shelf is empty add a book</string>
    <string name="noBooksFound">No books found</string>
    <string name="deleteBook">Delete %s?</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
    <string name="sortBy">Sort by:</string>
    <string name="pages">%d pages</string>
    <string name="isbnAndTitle">ISBN/Title</string>
    <plurals name="searchResults">
        <item quantity="one">1 search result</item>
        <item quantity="other">%d search results</item>
    </plurals>
    <string name="noSelectedBooks">No books selected</string>
    <string name="save">Save</string>
</resources>
